fixed spacings on the pages and sidebar

--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -3,9 +3,9 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 9.5vh;
+  /* height: 10vh; */
   padding: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 4em;
 }
 
 .logo{
