--- a/src/components/SideBar/sideBar.css
+++ b/src/components/SideBar/sideBar.css
@@ -1,26 +1,4 @@
-/* .sidebar {
-    background-color: #333;
-    color: white;
-    width: 200px;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: -200px;
-    transition: left 0.3s;
-  }
-  
-  .sidebar.show {
-    left: 0;
-  }
-  
-  .sidebar-item {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: white;
-  }
-   */
-  .sidebar{
+.sidebar{
     background-color: #979595;
     display: flex;
     flex-direction: column;
@@ -28,7 +6,8 @@
     width: 200px;
     position: fixed;
     transition: left 0.3s;
-    margin-top: 68px;
+    margin-top: -4em;
+    padding-top: 1.5em;
   }
 
   .sidebar-item {
