--- a/src/pages/public/Main/home.css
+++ b/src/pages/public/Main/home.css
@@ -7,7 +7,6 @@
     background-color: white;
     color: rgb(58, 118, 137);
     padding: 20px;
-    margin-top: 40px;
   }
   
   .contributors {
